--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
     </div>
     <div class="row" align="middle" style="padding-top: 50px">
-        <a class="btn btn-warning" href="Index.html">Reset</a>
+        <button class="btn btn-warning" onclick="window.location.reload()">Reset</button>
     </div>
 
 </div>
