--- a/Index3.html
+++ b/Index3.html
@@ -21,7 +21,10 @@ function ajax_post(){
     }
     // Send the data to PHP now... and wait for response to update the status div
     hr.send(vars); // Actually execute the request
-    document.getElementById("status").innerHTML = "processing...";
+    var return_data = hr.responseText;
+			document.getElementById("status").innerHTML = return_data;
+		
+//document.getElementById("status").innerHTML = "processing...";
 }
 </script>
 </head>
