--- a/maps.html
+++ b/maps.html
@@ -55,7 +55,7 @@
 
 <div class="container">
     <div style="padding: 5px 5px 5px 5px;" class="well">
-    <div id="map" style="width:60%; display:inline-block;border:5px solid black;background:url(http://www.freeiconspng.com/uploads/earth-png-28.png) no-repeat center"></div>
+    <div id="map" style="width:60%; display:inline-block;border:5px solid black;background:url(http://images.clipartpanda.com/globe-clipart-png-earth-md.png) no-repeat center"></div>
 
     <!--<input type="text" class="form-control" id="MapsInput" style="height:100px">-->
     <div style="display:inline-block" >
