--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ function SetSelectedVideoId(videoId){
 
     <div id="divid" ng-controller="valueController" class="container-fluid">
      <div class="col-sm-9 video">
-        <h3> <img src="YouTube_Logo.png" style="margin-right:10px;height:30px;">Remote Controller</h3>
+        <h3> <a href="final.html" ><img src="YouTube_Logo.png" style="margin-right:10px;height:30px;">Remote Controller</a></h3>
     </div>
         <form class="navbar-form video" role="search">
             <div class="input-group add-on" style="width:100%">
