--- a/final.html
+++ b/final.html
@@ -124,7 +124,7 @@ function change()
 {
 //console.log("change"); 
     var newFile = new XMLHttpRequest();
-newFile.open("GET", " https://helloapp-35d94.firebaseio.com/videoId.json", true);
+newFile.open("GET", " https://helloapp-35d94.firebaseio.com/YoutubeRemote/videoId.json", true);
     newFile.onreadystatechange = function ()
     {
 //console.log("done");
