--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ function SetSelectedVideoId(videoId){
 
     <div id="divid" ng-controller="valueController" class="container-fluid">
      <div class="col-sm-9 video">
-        <h3> <a href="final.html" ><img src="YouTube_Logo.png"  target="_blank" style="margin-right:10px;height:30px;">Open The Remote Player</a></h3>
+        <h3> <a href="player.html" ><img src="YouTube_Logo.png"  target="_blank" style="margin-right:10px;height:30px;">Open The Remote Player</a></h3>
     </div>
         <form class="navbar-form video" role="search">
             <div class="input-group add-on" style="width:100%">
